# eureka-mmanager

./: .gitignore  Cargo.toml  LICENCE-MIT  Makefile.toml  Method list.ods  README.md  chapters.txt  mangadex-desktop-api.postman_collection.json  package.json  test_history
.github/workflows/: download_chapter.yml  rust.yml  tests.yml
benches/: aggregate.rs  chapter_listing.rs
crates/core/: Cargo.toml  README.md
crates/core/examples/: aggregate.rs  data_pull_chapter.rs  data_push_manga.rs
crates/core/src/: data_pulls.rs  data_push.rs  error.rs  file_dirs.rs  lib.rs
crates/core/src/data_pulls/: chapter.rs  cover.rs  filter.rs  manga.rs  random.rs  results.rs
crates/core/src/data_pulls/chapter/: filter.rs  ids.rs  images.rs  list.rs
crates/core/src/data_pulls/cover/: ids.rs  list.rs
crates/core/src/data_pulls/manga/: aggregate.rs  filter.rs  ids.rs  list.rs
crates/core/src/data_push/: chapter.rs  cover.rs  manga.rs
crates/core/src/data_push/chapter/: image.rs
crates/core/src/file_dirs/: chapters.rs  covers.rs  verification.rs
crates/edmx/: Cargo.toml
crates/edmx/src/: builder.rs  constants.rs  contents.rs  lib.rs
crates/edmx/src/builder/: inner.rs
crates/edmx/src/contents/: options.rs
crates/emdx/: Cargo.toml  README.md
crates/emdx/examples/: make_archive.rs  read_chapter_emdx.rs
crates/emdx/src/: archive.rs  builder.rs  constants.rs  contents.rs  lib.rs  utils.rs
crates/emdx/src/archive/: pull.rs
crates/emdx/src/archive/pull/: any.rs  chapter.rs  cover.rs  manga.rs
crates/emdx/src/builder/: inner.rs
crates/emdx/src/contents/: options.rs
crates/emdx/src/utils/: zstd_reader.rs
crates/manager/: Cargo.toml
crates/manager/examples/: aggregate.rs  cbor_tests.rs  chapter_lists.rs  cover_tests.rs  delete_manga_test.rs  download_test.rs  manga_lists.rs  push_test.rs
crates/manager/src/: core.rs  download.rs  files_dirs.rs  history.rs  lib.rs  recipients.rs
crates/manager/src/core/: error.rs
crates/manager/src/data_pulls/chapter/: ids.rs  images.rs
crates/manager/src/data_pulls/cover/: list.rs
crates/manager/src/data_push/: cover.rs  manga.rs
crates/manager/src/data_push/chapter/: image.rs
crates/manager/src/download/: chapter.rs  cover.rs  manga.rs  messages.rs
crates/manager/src/download/chapter/: task.rs
crates/manager/src/download/chapter/task/messages/: cancel.rs  download.rs  state.rs  sub.rs  wait.rs
crates/manager/src/download/cover/: task.rs
crates/manager/src/download/cover/task/messages/: cancel.rs  download.rs  state.rs  sub.rs  wait.rs
crates/manager/src/download/manga/: task.rs
crates/manager/src/download/manga/task/messages/: cancel.rs  download.rs  state.rs  sub.rs  wait.rs
crates/manager/src/download/messages/: chapter.rs  cover.rs  manga.rs
crates/manager/src/download/state/: messages.rs  task.rs
crates/manager/src/download/state/messages/: get.rs  update.rs
crates/manager/src/download/state/messages/get/: client.rs  dir_options.rs  history.rs
crates/manager/src/download/state/messages/update/: client.rs
crates/manager/src/download/state/task/: test_wait.rs
crates/manager/src/download/traits/: managers.rs  task.rs
crates/manager/src/files_dirs/: events.rs  messages.rs
crates/manager/src/files_dirs/messages/: join.rs  push.rs  subscribe.rs
crates/manager/src/files_dirs/messages/delete/: chapter.rs  cover.rs  manga.rs
crates/manager/src/files_dirs/messages/delete/chapter/: images.rs
crates/manager/src/files_dirs/messages/pull/: chapter.rs  cover.rs
crates/manager/src/files_dirs/messages/pull/chapter/: chapter_at_home_pull.rs  chapter_data_pull.rs  chapter_ids_list_data_pull.rs  chapter_image_data_pull.rs  chapter_image_data_saver_pull.rs  chapter_list_data_pull.rs
crates/manager/src/files_dirs/messages/pull/cover/: cover_data_pull.rs  cover_ids_list_data_pull.rs  cover_image_data_pull.rs  cover_list_data_pull.rs
crates/manager/src/files_dirs/messages/pull/manga/: manga_data_pull.rs  manga_ids_list_data_pull.rs  manga_list_data_pull.rs
crates/manager/src/history/: service.rs
crates/manager/src/history/base/: error.rs
crates/manager/src/history/history_w_file/: traits.rs
crates/manager/src/history/service/: messages.rs
crates/manager/src/history/service/messages/: commit.rs  insert.rs  remove.rs  rollback.rs
crates/misc/eureka-manager-cli/: Cargo.toml
crates/misc/eureka-manager-cli/src/: commands.rs  lib.rs  main.rs
crates/misc/eureka-manager-cli/src/commands/: count.rs  delete.rs  download.rs  transfer.rs
crates/misc/eureka-manager-cli/src/commands/count/: chapter.rs  cover.rs  manga.rs
crates/misc/eureka-manager-cli/src/commands/delete/: chapter.rs  cover.rs  manga.rs
crates/misc/eureka-manager-cli/src/commands/download/: chapter.rs  cover.rs  manga.rs
eureka-manager-cli/: Cargo.toml
examples/: cbor_tests.rs  delete_manga_test.rs  download_test.rs  manga_lists.rs  push_test.rs
id_list_txt_reader/src/: lib.rs
settings/: files-dirs.json  server-options.json
src/: chapter_download.rs  core.rs  cover_download.rs  data_pulls.rs  data_push.rs  download.rs  extractors.rs  feeds.rs  files_dirs.rs  history.rs  lib.rs  login.rs  main.rs  manga_download.rs  methods.rs  server.rs  settings.rs  tauri.rs  utils.rs
src/core/: error.rs  mod.rs
src/data_pulls/: chapter.rs  cover.rs  filter.rs  manga.rs  random.rs  results.rs  sort.rs
src/data_push/: chapter.rs  cover.rs  manga.rs
src/download/: chapter.rs  cover.rs  manga.rs  messages.rs  mod.rs  state.rs  traits.rs
src/feeds/: mod.rs  rt.rs
src/files_dirs/: mangas.rs  messages.rs
src/history/: base.rs  entry.rs  history_w_file.rs  service.rs
src/methods/: delete.rs  get.rs  mod.rs  patch.rs  put.rs
src/server/: app.rs  app_state.rs  mod.rs  state.rs  traits.rs  unix.rs
src/settings/: file_history.rs  files_dirs.rs  mod.rs  server_options.rs
src/static/: history.rs
src/tauri/: mod.rs
src/to_json/: chapter.rs  manga.rs  mod.rs
src/utils/: chapter.rs  collection.rs  cover.rs  (+6 more)
test-tauri/: Cargo.toml  tauri.conf.json
tests/: app_state.rs  chapters.rs  download_chapter.rs  requests.rs
(+217 files in other folders)
