[workspace]
members = [
    "./crates/misc/*",
    "./crates/core/",
    "./crates/manager",
    "crates/core",
]
default-members = ["./crates/manager"]
resolver = "2"

[workspace.dependencies]
id_list_txt_reader = { path = "./crates/misc/id_list_txt_reader" }
mangadex-desktop-api2 = { path = "./crates/manager" }
api-core = { path = "./crates/core", package = "mangadex-desktop-api2-core" }
reqwest = { version = "0.12", features = [
    "cookies",
    "json",
    "multipart",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
url = { version = "2.5", features = ["serde"] }
mangadex-api = { version = "3.3", default-features = false, features = [
    "rw-multi-thread",
    "utils",
    "serialize",
] }
serde_json = { version = "1.0" }
mangadex-api-schema-rust = { version = "0.9", default-features = false, features = [
    "serialize",
] }
mangadex-api-types-rust = { version = "0.9", default-features = false }
tokio = { version = "1.37", features = ["sync", "rt"] }
log = "^0.4.21"
tokio-stream = { version = "0.1" }
bytes = { version = "1.6" }
itertools = "0"
mangadex-api-input-types = { version = "0.5" }
actix = "0.13"
regex = "1"
rand = { version = "0" }
ciborium = { version = "0" }
