[package]
name = "eureka-mmanager-core"
version = "1.0.0-alpha.1"
edition.workspace = true
authors = ["tonymushah <tonymushahdev06@yahoo.com>"]
license = "MIT OR Apache-2.0"
description = "The core package for the eureka-mmanager crate."
repository = "https://github.com/tonymushah/eureka-mmanager"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-stream = { workspace = true, optional = true }
uuid.workspace = true
rand.workspace = true
ciborium.workspace = true
url.workspace = true
mangadex-api-schema-rust.workspace = true
mangadex-api-types-rust.workspace = true
bytes.workspace = true
itertools.workspace = true
mangadex-api-input-types.workspace = true
actix = { workspace = true, optional = true }
regex.workspace = true
log = { workspace = true, optional = true }
non-exhaustive.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true

[features]
actix = ["dep:actix"]
log = ["dep:log"]
stream = ["dep:tokio-stream"]
