[package]
name = "emdx"
version = "1.0.0-alpha.1"
edition.workspace = true
authors = ["tonymushah <tonymushahdev06@yahoo.com>"]
license = "MIT OR Apache-2.0"
description = "The emdx official crate"
repository = "https://github.com/tonymushah/eureka-mmanager"
readme = "./README.md"

[dependencies]
api-core = { workspace = true }
tar.workspace = true
zstd.workspace = true
serde.workspace = true
ciborium.workspace = true
thiserror.workspace = true
uuid.workspace = true
mangadex-api-schema-rust.workspace = true
mangadex-api-types-rust.workspace = true
tempfile = "3"
image = { version = "0.25", features = [
    "jpeg",
    "png",
    "gif",
], default-features = false }
regex = { workspace = true }

[dev-dependencies]
anyhow.workspace = true
