[package]
name = "mangadex-desktop-api2"
version = "1.0.0-alpha.1"
authors = ["tonymushah <tonymushahdev06@yahoo.com>"]
license = "MIT OR Apache-2.0"
description = "A Actix server for downloading manga, chapters, covers from Mangadex"
repository = "https://github.com/tonymushah/eureka-mmanager"
edition = "2021"
resolver = "2"
rust-version = "1.76"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true
mangadex-api.workspace = true
serde_json.workspace = true
mangadex-api-schema-rust.workspace = true
mangadex-api-types-rust.workspace = true
tokio.workspace = true
log.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
itertools.workspace = true
mangadex-api-input-types.workspace = true
regex.workspace = true
actix.workspace = true
rand.workspace = true
ciborium.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
once_cell = "1.19"
# moka = { version = "0.12", features = ["future"]}
toml = "0.8"
anyhow = "1.0"
