[package]
name = "eureka-mmanager"
version = "0.2.2"
authors = ["tonymushah <tonymushahdev06@yahoo.com>"]
license = "MIT OR Apache-2.0"
description = "An Actix actor collection for downloading manga, chapters, covers from Mangadex"
repository = "https://github.com/tonymushah/eureka-mmanager"
edition = "2021"
resolver = "2"
rust-version = "1.76"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true
mangadex-api.workspace = true
serde_json.workspace = true
mangadex-api-schema-rust.workspace = true
mangadex-api-types-rust.workspace = true
tokio.workspace = true
log.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
itertools.workspace = true
mangadex-api-input-types.workspace = true
actix.workspace = true
api-core = { workspace = true, features = ["stream", "actix"] }
tokio-util = "0.7.13"
futures-util = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
once_cell = "1.19"
# moka = { version = "0.12", features = ["future"]}
toml = "0.8"
anyhow = "1.0"
ciborium.workspace = true
