[package]
name = "eureka-mmanager"
version = "1.0.0-alpha.1"
authors = ["tonymushah <tonymushahdev06@yahoo.com>"]
license = "MIT OR Apache-2.0"
description = "An Actix actor collection for downloading manga, chapters, covers from Mangadex"
repository = "https://github.com/tonymushah/eureka-mmanager"
edition.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true
mangadex-api.workspace = true
serde_json.workspace = true
mangadex-api-schema-rust.workspace = true
mangadex-api-types-rust.workspace = true
tokio.workspace = true
log.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
itertools.workspace = true
mangadex-api-input-types.workspace = true
actix.workspace = true
api-core = { workspace = true, features = ["stream", "actix"] }
tokio-util = "0.7.13"
futures-util = { version = "0.3", default-features = false }
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
once_cell = "1.19"
# moka = { version = "0.12", features = ["future"]}
toml = "0.9"
anyhow = "1.0"
ciborium.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
non-exhaustive.workspace = true
