[package]
name = "eureka-manager-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
eureka-mmanager.workspace = true
actix.workspace = true
anyhow = "1.0.86"
clap = { workspace = true, features = ["unstable-doc"] }
fern = "0.6.2"
id_list_txt_reader = { workspace = true, package = "file_listing" }

[dev-dependencies]
