[package]
name = "eureka-manager-cli"
version = "0.1.1"
edition = "2021"
authors = ["tonymushah <tonymushahdev06@yahoo.com>"]
license = "MIT OR Apache-2.0"
description = "The official cli for the eureka-mmanager"
repository = "https://github.com/tonymushah/eureka-mmanager"

[[bin]]
name = "eureka-manager"
path = "./src/main.rs"

[dependencies]
eureka-mmanager.workspace = true
actix.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["unstable-doc"] }
fern = "0.6.2"
id_list_txt_reader = { workspace = true, package = "file_listing" }
time = { version = "0.3.37", features = ["formatting", "local-offset"] }
humantime = "2.1.0"
mangadex-api.workspace = true
reqwest.workspace = true
emdx.workspace = true
uuid.workspace = true
log.workspace = true
tokio.workspace = true
mangadex-api-types-rust.workspace = true
serde.workspace = true
tokio-stream.workspace = true
indicatif = "0.17.9"
duration-string = "0.5.2"
indicatif-log-bridge = "0.2.3"

[dev-dependencies]
